# api.tatortrechts.de

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.json  conftest.py  docker-compose.yml  local.sh  local_manage.sh  manage.py  pyproject.toml  useproddata.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  deploy.yml  test.yml
apirechtegewalt/: settings.py  settings_test.py  urls.py  wsgi.py
apirechtegewalt/cms/: __init__.py  api.py  apps.py  models.py  urls.py
apirechtegewalt/cms/migrations/: 0001_initial.py  0002_auto_20201010_2244.py  0003_auto_20201011_1524.py  0004_auto_20201011_1526.py  0005_auto_20210109_2027.py  0006_auto_20210109_2040.py  0007_customimage_customrendition.py  0008_auto_20210109_2311.py  0009_auto_20210109_2318.py  0010_auto_20210109_2358.py  0011_auto_20210110_1540.py  0012_auto_20210110_1654.py  0013_auto_20210110_1709.py  0014_auto_20210110_1715.py  0015_auto_20210110_2318.py  0016_auto_20210111_0008.py  0017_auto_20210111_0011.py  0018_contentpage_article_teaser.py  0019_contentpage_article_image_caption.py  0020_customimage_description_alter_customimage_file_and_more.py
apirechtegewalt/main/: __init__.py  admin.py  apps.py  autocomplete.py  models.py  search.py  serializers.py  urls.py  views.py
apirechtegewalt/main/migrations/: 0002_auto_20200825_1430.py  0003_auto_20200828_1846.py  0004_auto_20200828_1928.py  0005_auto_20200901_1331.py  0006_auto_20200901_1342.py  0007_phrase.py  0008_auto_20200902_2007.py  0009_auto_20200902_2018.py  0010_incident_search_vector.py  0011_phrase_search_vector.py  0012_trigram_unaccent.py  0013_location_geolocation_geometry.py  0014_auto_20200909_1451.py  0015_auto_20200911_1310.py  0016_auto_20200911_1430.py  0017_auto_20200911_1432.py  0018_auto_20200911_1435.py  0019_auto_20200916_1210.py  0020_incident_phrases.py  0021_location_search_vector.py  0022_remove_incident_iso3166_2.py  0023_auto_20200927_1642.py  0024_auto_20200927_1646.py  0025_auto_20210102_1708.py  0026_incident_orig_address.py  0027_auto_20210123_2208.py  0028_incident_motives.py  0029_auto_20210123_2251.py  0030_auto_20210123_2256.py  0031_auto_20210123_2300.py  0032_auto_20210123_2320.py  0033_incidentsubmitted.py  0034_delete_incidentsubmitted.py  0035_incidentsubmitted.py  0036_errorreport.py  0037_auto_20210207_2325.py  0038_auto_20210207_2333.py  (+7 more)
dokku/: CHECKS  Procfile  nginx.conf.sigil  uwsgi.ini
templates/cms/: column.html  content_page.html  two_column_block.html
templates/main/: errorreport_form.html  incidentsubmitted_form.html
tests/: test_aggregated_incidents.py  test_all_case_ids.py  test_autocomplete.py  test_chronicles.py  test_chronicles_histogram.py  test_cms_pages.py  test_histogram.py  test_incidents.py  test_locations.py  test_min_max_date.py
(+5 files in other folders)
