[tool.poetry]
authors = []
description = ""
name = "apirechtegewalt"
version = "0.0.0"

[tool.poetry.dependencies]
clean-text = "^0.3.0"
dataset = "^1.4.1"
django = "^3.1.3"
django-cors-headers = "^3.5.0"
django-dotenv = "^1.4.2"
django-extensions = "^3.0.9"
django-filter = "^2.4.0"
django-redis = "^4.12.1"
djangorestframework = "^3.12.2"
djangorestframework-gis = "^0.16"
gunicorn = "^20.0.4"
markdown = "^3.3.3"
psycopg2-binary = "^2.8.6"
python = "^3.8"
sentry-sdk = "^0.19.4"
tqdm = "^4.53.0"
wagtail = "^2.11.2"
whitenoise = "^5.2.0"
django-crispy-forms = "^1.10.0"
django-dbbackup = "^3.3.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true, python = ">=3.6"}
pytest = "*"
pytest-cov = "*"
werkzeug = "*" # used for local development server

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
