[tool.poetry]
authors = []
description = ""
name = "apirechtegewalt"
version = "0.0.0"

[tool.poetry.dependencies]

clean-text = {version = "^0.4.0", extras = ["gpl"]}
dataset = "^1.4.1"
django = "^3.1.13"
django-cors-headers = "^3.5.0"
django-crispy-forms = "^1.12.0"
django-dbbackup = "^3.3.0"
django-filter = "^2.4.0"
django-redis = "^5.0.0"
djangorestframework = "^3.12.2"
djangorestframework-gis = "^0.17"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.9.1"
python = "^3.8"
sentry-sdk = "^1.1.0"
tqdm = "^4.61.1"
wagtail = "^2.12.5"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true, python = ">=3.6"}
django-extensions = "^3.0.9" # only needed for debug commands for now
pytest = "*"
pytest-cov = "*"
werkzeug = "*" # used for local development server

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
