[tool.poetry]
authors = []
description = ""
name = "apirechtegewalt"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.12"
clean-text = {version = "^0.6", extras = ["gpl"]}
dataset = "^1.6"
django = "^5.1"
django-cors-headers = "^4.4"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"
django-dbbackup = "^4.1"
django-filter = "^24.3"
django-redis = "^5.4"
djangorestframework = "^3.15"
djangorestframework-gis = "^1.1"
gunicorn = "^22.0"
psycopg2-binary = "^2.9"
sentry-sdk = "^2.14"
tqdm = "^4.66"
wagtail = "^6.3"
whitenoise = "^6.7"

[tool.poetry.group.dev.dependencies]
black = "*"
django-extensions = "^3.2"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
werkzeug = "*"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "apirechtegewalt.settings_test"
pythonpath = ["."]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
